Upgrade JVM opts